Adding hover anchor links to header on GitHub Pages using Jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 # Dependencies
 markdown:         redcarpet
 highlighter:      pygments
-
+redcarpet:
+  extensions:    ["with_toc_data"]
+  
 # Permalinks
 permalink:        pretty
 relative_permalinks: true
