--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         redcarpet
 highlighter:      pygments
 redcarpet:
   extensions:    ["with_toc_data"]
-  
+
 # Permalinks
 permalink:        pretty
 relative_permalinks: true
@@ -16,6 +16,7 @@ url:              http://mildronize.github.io/
 baseurl:          /
 
 author:
+  codename:       mildronize
   name:           'Thada Wangthammang'
   profile:        images/my-profile.jpg
 
