--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,10 @@ relative_permalinks: true
 title:            Mildronize's blog
 tagline:          'mildronize-blog'
 description:      'My notes & interesting issues'
+keywords:         [note, computer, programming, script, knowledge, coding, technique, collection, glossary, data, infomation, internet, web]
 url:              http://mildronize.github.io/
 baseurl:          /
+
 
 author:
   codename:       mildronize
