--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,10 @@ tagline:          'mildronize-blog'
 description:      'My notes & interesting issues'
 keywords:         [note, computer, programming, script, knowledge, coding, technique, collection, glossary, data, infomation, internet, web]
 url:              http://mildronize.github.io
+# for dev
+# url:              http://127.0.0.1:4000
 baseurl:          /
+image_url:        /public/images
 comment:          true
 
 
