--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url:              http://mildronize.github.io
 # for dev
 # url:              http://127.0.0.1:4000
 baseurl:          /
-image_url:        /public/images
+image_url:        public/images/
 comment:          true
 
 author:
