--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ redcarpet:
   extensions:    ["with_toc_data"]
 
 # Permalinks
-permalink:        pretty
+#permalink:        pretty
+permalink:          /en/:categories/:title/
 relative_permalinks: true
 
 # Setup
