--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ redcarpet:
 
 # Permalinks
 #permalink:        pretty
-permalink:          /en/:categories/:title/
+permalink:          /:categories/:title/
 relative_permalinks: true
 
 # Setup
@@ -14,10 +14,10 @@ title:            Mildronize's blog
 tagline:          'mildronize-blog'
 description:      "My notes and interesting things"
 keywords:         [note, computer, programming, script, knowledge, coding, technique, collection, glossary, data, infomation, internet, web]
-url:              http://mildronize.github.io
+url:              http://dev.mildronize.com
 # for dev
-# url:              http://127.0.0.1:4000
-baseurl:          /
+#url:              http://127.0.0.1:4000
+baseurl:          /en
 image_url:        public/images/
 comment:          true
 
