--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ redcarpet:
 
 # Permalinks
 #permalink:        pretty
-permalink:          /:categories/:title/
+permalink:          /:year/:month/:day/:title/
 relative_permalinks: true
 
 # Setup
