Add new page fix that if 'add_menu' is true, attach the page into the menu

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ changelang:       อ่านแบบภาษาไทย
 author:
   codename:       mildronize
   name:           'Thada Wangthammang'
+  email:          mildronize@gmail.com
   profile:        images/my-profile.jpg
 
 paginate:         5
