Added a comment for fixing a problem Travis (https://travis-ci.org/mildronize/mildronize.github.io/builds/105101966).

--- a/_config.yml
+++ b/_config.yml
@@ -33,4 +33,5 @@ paginate:         5
 
 google_analytics_id:  UA-62565035-1
 
+# Fix a problem following https://github.com/jekyll/jekyll/issues/3525
 exclude: [vendor]
