Change Markdown convertor back to redcarpet

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
-markdown:         Kramdown
-gems: [jekyll-paginate, jekyll-gist, redcarpet]
+markdown:        redcarpet
+gems:            [jekyll-paginate, jekyll-gist, redcarpet]
 
 # highlighter:      rouge
 redcarpet:
