remove sudo from .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ branches:
   only:
   - jekyll
 before_script:
-  - echo 'Asia/Bangkok' | sudo tee /etc/timezone
-  - sudo dpkg-reconfigure --frontend noninteractive tzdata
+  - echo 'Asia/Bangkok' | tee /etc/timezone
+  - dpkg-reconfigure --frontend noninteractive tzdata
 script:
 - bundle exec jekyll build
 - bundle exec htmlproof ./_site --disable-external
