--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,10 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
+[**.scss]
+indent_style = space
+indent_size = 2
+
 # Matches the exact files either package.json or .travis.yml
 [{package.json,.travis.yml}]
 indent_style = space
