--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "watch-sync": "chokidar -i \"_site/**\" \"**/*\" -c \"npm run sync-unison\"",
     "sync-unison": "unison . socket://192.168.99.100:5000/ -follow \"Regex .*\" -ignore \"Path node_modules\" -ignore \"Path .git\" -ignore \"Path yarn.lock\" -auto -batch",
     "in-docker-dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run docker-jekyll-build\" \"browser-sync start -s jekyll/_site -f jekyll/_site --extensions html\"",
-    "build": "bundle exec jekyll build --watch --incremental",
+    "copy-preload-css": "cp _site/public/css/preload_styles.css src/_includes/css",
+    "build": "bundle exec jekyll build --watch --incremental  --trace ",
     "dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run build\" \"browser-sync start -s _site -f _site --extensions html\"",
     "webpack-dev": "webpack --mode development",
     "webpack-build": "webpack --mode production"
