--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mildronize.github.io",
   "version": "1.0.0",
-  "description": "[![Build Status](https://travis-ci.org/mildronize/mildronize.github.io.svg?branch=jekyll)](https://travis-ci.org/mildronize/mildronize.github.io)",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,13 +9,15 @@
     "open-preview": "start http://192.168.99.100:3000",
     "docker-restart": "docker-compose stop jekyll && docker-compose start jekyll",
     "dev:docker-init": "docker-compose up -d && docker cp package.json jekyll:/src && docker exec -i jekyll yarn && docker cp Gemfile jekyll:/src &&docker exec -i jekyll bundle install && docker cp jekyll:/src/Gemfile.lock .",
-    "dev:docker": "npm run sync-unison && npm run docker-restart && npm run open-preview && concurrently -k -n \"SYNC,DOCKER\" -c \"bgRed.bold,bgCyan.bold\" \"npm run watch-sync\" \"docker exec -i jekyll npm run in-docker-dev\"",
-    "watch-sync": "chokidar -i \"_site/**\" \"**/*\" -c \"npm run sync-unison\"",
+    "dev:docker": "npm run sync-unison && npm run docker-restart && npm run open-preview && concurrently -k -n \"SYNC,DOCKER\" -c \"bgRed.bold,bgCyan.bold\" \"npm run watch:sync\" \"docker exec -i jekyll npm run in-docker-dev\"",
+    "watch:sync": "chokidar -i \"_site/**\" \"**/*\" -c \"npm run sync-unison\"",
     "sync-unison": "unison . socket://192.168.99.100:5000/ -follow \"Regex .*\" -ignore \"Path node_modules\" -ignore \"Path .git\" -ignore \"Path yarn.lock\" -auto -batch",
     "in-docker-dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run docker-jekyll-build\" \"browser-sync start -s jekyll/_site -f jekyll/_site --extensions html\"",
     "copy-preload-css": "cp _site/public/css/preload_styles.css src/_includes/css",
-    "build": "bundle exec jekyll build --watch --trace ",
-    "dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run build\" \"browser-sync start -s _site -f _site --extensions html\"",
+    "build": "bundle exec jekyll build --trace ",
+    "watch:build:inc": "bundle exec jekyll build --watch --incremental --trace ",
+    "dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run watch:build:inc\" \"npm run serve\"",
+    "serve": "live-server _site",
     "dev:webpack": "webpack --mode development",
     "build:webpack": "webpack --mode production"
   },
