--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
   - jekyll
 script:
 - bundle exec jekyll build
-- bundle exec htmlproofer ./_site --disable-external
+# - bundle exec htmlproofer ./_site --disable-external
 
 deploy:
   provider: pages
