--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "watch:sync": "chokidar -i \"_site/**\" \"**/*\" -c \"npm run sync-unison\"",
     "sync-unison": "unison . socket://192.168.99.100:5000/ -follow \"Regex .*\" -ignore \"Path node_modules\" -ignore \"Path .git\" -ignore \"Path yarn.lock\" -auto -batch",
     "in-docker-dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run docker-jekyll-build\" \"browser-sync start -s jekyll/_site -f jekyll/_site --extensions html\"",
-    "copy-preload-css": "cp _site/public/css/preload_styles.css src/_includes/css",
+    "copy-preload-css": "cp _site/static/css/preload_styles.css src/_includes/css",
     "build": "bundle exec jekyll build --trace ",
     "watch:build:inc": "bundle exec jekyll build --watch --incremental --trace ",
     "dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run watch:build:inc\" \"npm run serve\"",
     "serve": "live-server _site",
     "dev:webpack": "webpack --mode development",
-    "build:webpack": "webpack --mode production"
+    "build:webpack": "webpack --mode production",
+    "export": "next build && next export",
+    "start": "next build && next start"
   },
   "repository": {
     "type": "git",
@@ -36,7 +38,12 @@
     "bulma": "^0.7.1",
     "cheerio": "^1.0.0-rc.2",
     "recursive-readdir": "^2.2.2",
-    "sync": "^0.2.5"
+    "sync": "^0.2.5",
+    "express": "^4.16.3",
+    "isomorphic-unfetch": "^2.1.1",
+    "next": "^6.1.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
