--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "@fortawesome/fontawesome-free": "^5.2.0",
     "bulma": "^0.7.1",
     "cheerio": "^1.0.0-rc.2",
-    "recursive-readdir": "^2.2.2",
-    "sync": "^0.2.5",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.1.1",
     "next": "^6.1.1",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "recursive-readdir": "^2.2.2",
+    "slash": "^2.0.0",
+    "sync": "^0.2.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
