--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "dev:webpack": "webpack --mode development",
     "build:webpack": "webpack --mode production",
     "export": "next build && next export",
-    "start": "next build && next start"
+    "analyze": "cross-env ANALYZE=1 next build",
+    "build-css": "node-sass-chokidar --include-path ./sass --include-path ./node_modules sass/ -o sass/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./sass --include-path ./node_modules sass/ -o sass/ --watch --recursive",
+    "dev:next": "node server.js",
+    "start": "npm-run-all -p watch-css dev:next"
   },
   "repository": {
     "type": "git",
@@ -36,15 +40,21 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.2.0",
     "bulma": "^0.7.1",
+    "bulma-extensions": "^2.2.1",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.1.1",
     "next": "^6.1.1",
+    "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-helmet": "^5.2.0",
+    "react-html-parser": "^2.0.2",
     "recursive-readdir": "^2.2.2",
     "slash": "^2.0.0",
-    "sync": "^0.2.5"
+    "styled-components": "^3.4.5",
+    "sync": "^0.2.5",
+    "webpack-bundle-analyzer": "^2.13.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -53,7 +63,9 @@
     "browser-sync": "^2.24.6",
     "chokidar-cli": "^1.2.0",
     "concurrently": "^3.6.1",
+    "cross-env": "^5.2.0",
     "jquery": "1.11.3",
+    "npm-run-all": "^4.1.3",
     "vanilla-lazyload": "8.15.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
