--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "copy-preload-css": "cp _site/static/css/preload_styles.css src/_includes/css",
     "build": "bundle exec jekyll build --trace ",
     "watch:build:inc": "bundle exec jekyll build --watch --incremental --trace ",
-    "dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run watch:build:inc\" \"npm run serve\"",
+    "dev": "concurrently -k -n \"NEXT,JEKYLL,BROWSER-SYNC\" -c \"bgRed.bold,bgBlue.bold,bgGreen.bold\" \"npm run dev:next\" \"npm run watch:build:inc\" \"npm run serve\"",
     "serve": "live-server _site",
     "dev:webpack": "webpack --mode development",
     "build:webpack": "webpack --mode production",
     "export": "next build && next export",
     "analyze": "cross-env ANALYZE=1 next build",
-    "build-css": "node-sass-chokidar --include-path ./sass --include-path ./node_modules sass/ -o sass/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./sass --include-path ./node_modules sass/ -o sass/ --watch --recursive",
     "dev:next": "node server.js",
-    "start": "npm-run-all -p watch-css dev:next"
+    "deploy": "npm run deploy:only && npm run now:alias && npm run now:clean",
+    "deploy:only": "now --public --npm",
+    "now:alias": "now alias",
+    "now:clean": "now rm --safe --yes technukrom",
+    "now:status": "now ls technukrom && now alias ls"
   },
   "repository": {
     "type": "git",
@@ -38,22 +40,23 @@
   },
   "homepage": "https://github.com/mildronize/mildronize.github.io#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.2.0",
+    "@zeit/next-sass": "^0.2.0",
     "bulma": "^0.7.1",
     "bulma-extensions": "^2.2.1",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.1.1",
     "next": "^6.1.1",
+    "node-sass": "^4.9.3",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^3.0.5",
     "recursive-readdir": "^2.2.2",
     "slash": "^2.0.0",
     "styled-components": "^3.4.5",
-    "sync": "^0.2.5",
     "webpack-bundle-analyzer": "^2.13.1"
   },
   "devDependencies": {
@@ -66,8 +69,6 @@
     "cross-env": "^5.2.0",
     "jquery": "1.11.3",
     "npm-run-all": "^4.1.3",
-    "vanilla-lazyload": "8.15.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "vanilla-lazyload": "8.15.0"
   }
 }
