--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 encoding                        : utf-8
 # Dependencies
-markdown                        : redcarpet
+# markdown                        : redcarpet
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
@@ -10,7 +10,7 @@ plugins:
 
 source: src
 
-# highlighter                     : rouge
+highlighter                     : rouge
 redcarpet                       :
   extensions                    : ["with_toc_data"]
 
