add moment js from calc date from now

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
   only:
   - jekyll
 script:
-- bundle exec jekyll build
+- JEKYLL_ENV=production bundle exec jekyll build
 # - bundle exec htmlproofer ./_site --disable-external
 
 deploy:
