--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "sync-unison": "unison . socket://192.168.99.100:5000/ -follow \"Regex .*\" -ignore \"Path node_modules\" -ignore \"Path .git\" -ignore \"Path yarn.lock\" -auto -batch",
     "in-docker-dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run docker-jekyll-build\" \"browser-sync start -s jekyll/_site -f jekyll/_site --extensions html\"",
     "copy-preload-css": "cp _site/public/css/preload_styles.css src/_includes/css",
-    "build": "bundle exec jekyll build --trace ",
+    "build": "cross-env JEKYLL_ENV=production bundle exec jekyll build --trace",
     "watch:build:inc": "bundle exec jekyll build --watch --incremental --trace ",
     "dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run watch:build:inc\" \"npm run serve\"",
     "serve": "live-server _site",
-    "dev:webpack": "webpack --mode development",
+    "dev:webpack": "webpack --watch --mode development",
     "build:webpack": "webpack --mode production"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "@fortawesome/fontawesome-free": "^5.2.0",
     "bulma": "^0.7.1",
     "cheerio": "^1.0.0-rc.2",
+    "moment": "^2.22.2",
     "recursive-readdir": "^2.2.2",
     "sync": "^0.2.5"
   },
@@ -45,6 +46,7 @@
     "browser-sync": "^2.24.6",
     "chokidar-cli": "^1.2.0",
     "concurrently": "^3.6.1",
+    "cross-env": "^5.2.0",
     "jquery": "1.11.3",
     "vanilla-lazyload": "8.15.0",
     "webpack": "^4.16.5",
