change search page from AngularJS to React

--- a/package.json
+++ b/package.json
@@ -35,14 +35,19 @@
     "@fortawesome/fontawesome-free": "^5.2.0",
     "bulma": "^0.7.1",
     "cheerio": "^1.0.0-rc.2",
+    "isomorphic-unfetch": "^2.1.1",
     "moment": "^2.22.2",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "recursive-readdir": "^2.2.2",
     "sync": "^0.2.5"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.24.6",
     "chokidar-cli": "^1.2.0",
     "concurrently": "^3.6.1",
