--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "recursive-readdir": "^2.2.2",
-    "sync": "^0.2.5"
+    "sync": "^0.2.5",
+    "yarn": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
@@ -52,7 +53,7 @@
     "chokidar-cli": "^1.2.0",
     "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
-    "jquery": "1.11.3",
+    "live-server": "^1.2.1",
     "vanilla-lazyload": "8.15.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
