--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bulma": "^0.7.1",
     "cheerio": "^1.0.0-rc.2",
     "isomorphic-unfetch": "^2.1.1",
+    "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -56,6 +57,6 @@
     "live-server": "^1.2.1",
     "vanilla-lazyload": "8.15.0",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.3.0"
   }
 }
