--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "cross-env JEKYLL_ENV=production bundle exec jekyll build --trace",
     "watch:build:inc": "bundle exec jekyll build --watch --incremental --trace ",
     "dev": "concurrently -k -n \"JEKYLL,BROWSER-SYNC\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run watch:build:inc\" \"npm run serve\"",
-    "serve": "live-server _site",
+    "serve": "live-server _site --host=0.0.0.0",
     "dev:webpack": "webpack --watch --mode development",
     "build:webpack": "webpack --mode production"
   },
