--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title                           : Mildronize's blog
 tagline                         : mildronize-blog
 description                     : My notes and interesting things
 keywords                        : [note, computer, programming, script, knowledge, coding, technique, collection, glossary, data, infomation, internet, web]
-url                             : https://mildronize.com
+url                             : https://jekyll.mildronize.com
 # for dev
 # url                           : http://127.0.0.1:4000
 #baseurl                        : /en
